[ASTERIXDB-3817][COMP] One taxonomy for vector metric names
- user model changes: yes
- storage format changes: no
- interface changes: yes

Details:
Metric names were resolved by two tables with different normalization
and compared as strings during index selection. The DDL accepted "cosine
similarity" that every query rejected. A query could accept
"euclidean-squared" and then silently miss its index.

VectorSimilarityMetric is now the only alias table. It drops "cosine
similarity" and the "-" to "_" mapping, and ignores case and surrounding
whitespace. VectorDistanceMetric instead looks up every spelling in that
table so the two cannot diverge. Since its only remaining job is
choosing which builtin implements the metric it is renamed
VectorMetricFunctionMapUtil. Index selection then compares enums and
both error messages list the aliases the table accepts.

Ext-ref: MB-73290
Change-Id: I07be9ec20dd45c73d404ba4ef09ede860509dc17
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/21649
Reviewed-by: Hongyu Shi <leoshy1005@gmail.com>
Reviewed-by: Ali Alsuliman <ali.al.solaiman@gmail.com>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>